@@ -41,6 +41,7 @@ Version 1.0.8.11
      * Fixed a typo in Modula-3 language file (SF#3358216, BenBE)
      * Added missing keywords for MySQL (SF#3290998, ct-bob, BenBE)
      * Added missing keywords for Pascal (SF#3176749, BenBE)
+     * Properly detect the keyword that is to be linked (BenBE)
 Version 1.0.8.10
   -  Added language files
      * BASCOM AVR (Michal Goralczyk)
